--- a/(2023) Fraga et al.tex
+++ b/(2023) Fraga et al.tex
@@ -127,6 +127,7 @@
 \end{highlights}
 
 \begin{keyword}
+multiproduct batch \sep processing time maximization
 %% keywords here, in the form: keyword \sep keyword
 
 %% PACS codes here, in the form: \PACS code \sep code
@@ -141,7 +142,147 @@
 %% \linenumbers
 
 %% main text
-\section{}
+\section{Introduction}
+\label{}
+
+\section{Multiproduct batch processing time maximization problem}
+\label{}
+
+The multiproduct batch processing time maximization problem arises when a set of different products are processed simultaneously in the same production batch. In this problem, it is considered that the quantity produced of each product is directly proportional to the processing time, however, with a different production rate (quantity/unit of time) for each product. In addition, there is a maximum quantity allowed for the production of batch products, defined both individually and for the set. The maximum production quantity of each product is defined according to the demand for the product. However, it is still possible to stock the products and/or send them to the outlets. In both cases, there is a stocking/shipping limit for each product and a stocking/shipping limit for the set of products in the batch. Also, there is a time limit available for processing the batch. The problem consists of defining the maximum processing time for the batch, respecting the limitations related to the quantities produced. For a better understanding of the problem, an example is presented below.
+
+\emph{Example:} A certain machine must process a batch containing 2 different products: A and B. The production rate of A is 60 g/min while the production rate of B is 40 g/min. The factory has free stock for a maximum of 3000 g of any product, and, according to the maximum stock allowed for each product, an additional 3000 g of product A and 2000 g of product B may be stocked at the factory. There is a demand for 1000 g of product A and 500 g of product B. The factory has an outlet that has free space in stock of 1000 g, which can receive a maximum of 600 g of each product. A maximum time of 300 minutes of this machine can be allocated for processing this batch. What is the maximum possible time for processing this batch ? 
+
+\section{Mathematical model}
+\label{}
+
+Given that: \\
+
+$\textrm{UD}_i$ is the demand for the product $i$; \\
+
+$\textrm{I}$ is the maximum quantity allowed for additional factory storage of all products in the batch; \\
+
+$\textrm{UI}_i$ is the maximum quantity allowed for stocking the product $i$ in the factory; \\
+
+$\textrm{O}$ is the maximum quantity allowed for shipment of all products to outlets; \\
+
+$\textrm{UO}_i$ is the maximum amount of product $i$ that can be shipped to outlets; \\ 
+
+$\textrm{p}_i$ is the production rate of product $i$; \\
+
+$\textrm{Z}$ is the timeout for batch processing; \\
+
+$P_i$ is the amount of product $i$ produced; \\
+
+$D_i$ is the amount of product $i$ delivered for the demand; \\
+
+$O_i$ amount of product $i$ shipped to factory outlets; \\
+
+$I_i$ is the amount of product $i$ that will be stored at the factory; \\
+
+$T$ is the batch processing time.
+
+We have the problem: \\
+
+\begin{equation}
+max \quad T
+\end{equation}
+
+$s.t.$ \\
+
+\begin{equation}
+P_i - \textrm{p}_i * T  = 0 \quad \forall i
+\end{equation}
+
+\begin{equation}
+P_i - D_i - O_i - I_i = 0 \quad \forall i
+\end{equation}
+
+\begin{equation}
+D_i \leq \textrm{UD}_i \quad \forall i
+\end{equation}
+
+\begin{equation}
+O_i \leq \textrm{UO}_i \quad \forall i
+\end{equation}
+
+\begin{equation}
+\sum_i{O_i} \leq \textrm{O}
+\end{equation}
+
+\begin{equation}
+I_i \leq \textrm{UI}_i \quad \forall i
+\end{equation}
+
+\begin{equation}
+\sum_i{I_i} \leq \textrm{I}
+\end{equation}
+
+\begin{equation}
+T \leq \textrm{Z}
+\end{equation}
+
+\begin{equation}
+D_i, O_i, I_i \in  \mathbb{Z}^+ \quad \forall i
+\end{equation}
+
+where: \\
+
+Constraints in (2) relate the quantity produced, $P_i$, to batch processing time $T$. Constraints in (3) calculate the quantity produced, $P_i$, as a function of the primary variables, $D_i$, $O_i$ and $I_i$. Constraints in (4), (5), and (7) state that the quantity delivered to demand, the quantity shipped to the autlets, and the factory-stocked quantity of each product must be less than their respective known limits. Constraints (6) and (8) state that both the sum of product quantities sent to the autlets and the sum of product quantities stored in the factory must be less than their respective maximum allowed values. The restriction in (9) establishes that there is a batch processing time limit, $Z$, that must be respected. And finally, the constraints in (10) inform the nature of the decision variables.
+
+\section{Analytical solution}
+\label{}
+
+It is possible to consider the factory stock and the outlets stock as single stock, so we have:
+
+\begin{equation}
+E_i = O_i + I_i
+\end{equation}
+
+where $E_i$ is the sum of the quantity stored at the factory and the quantity sent to the outlets of the product $i$. \\
+
+So that:
+
+\begin{equation}
+E_i \leq \textrm{UO}_i + \textrm{UI}_i
+\end{equation}
+
+and
+
+\begin{equation}
+\sum_i {E_i} \leq \textrm{O} + \textrm{I}
+\end{equation}
+
+
+It is also possible to split the batch processing time into two time slots:
+
+\begin{equation}
+T = T' + T''
+\end{equation}
+
+and consider that T' is the maximum processing time used only for production that will meet the demand. Thus, we can find T', solving the reduced problem:
+
+
+\begin{equation}
+max \quad T'
+\end{equation}
+
+$s.t.$ \\
+
+\begin{equation}
+D_i - \textrm{p}_i * T'  = 0 \quad \forall i
+\end{equation}
+
+\begin{equation}
+D_i \leq \textrm{UD}_i \quad \forall i
+\end{equation}
+
+\begin{equation}
+D_i \in  \mathbb{Z}^+ \quad \forall i
+\end{equation}
+
+
+
+\section{Tests and results}
 \label{}
 
 %% The Appendices part is started with the command \appendix;
