--- a/(2023) Fraga et al.tex
+++ b/(2023) Fraga et al.tex
@@ -146,7 +146,7 @@ multiproduct batch \sep processing time maximization
 \label{}
 
 \section{Multiproduct batch processing time maximization problem}
-\label{}
+\label{sec:MBPTMP}
 
 The multiproduct batch processing time maximization problem arises when a set of different products are processed simultaneously in the same production batch. In this problem, it is considered that the quantity produced of each product is directly proportional to the processing time, however, with a different production rate (quantity/unit of time) for each product. In addition, there is a maximum quantity allowed for the production of batch products, defined both individually and for the set. The maximum production quantity of each product is defined according to the demand for the product. However, it is still possible to stock the products and/or send them to the outlets. In both cases, there is a stocking/shipping limit for each product and a stocking/shipping limit for the set of products in the batch. Also, there is a time limit available for processing the batch. The problem consists of defining the maximum processing time for the batch, respecting the limitations related to the quantities produced. For a better understanding of the problem, an example is presented below.
 
@@ -360,10 +360,80 @@ step 3: find $T''$, where:
 T'' = \min \{(\textrm{UO}_i + \textrm{UI}_i + S_i) / \textrm{p}_i, (\textrm{O} + \textrm{I} + \sum_i {S_i}) / \sum_i {\textrm{p}_i}\}
 \end{equation}
 
-step 2: calculate $T$, where: 
+step 4: calculate $T$, where: 
 
 \begin{equation}
 T = T' + T''
+\end{equation}
+
+\begin{equation}
+T = \min {T , Z}
+\end{equation}
+
+It is probably possible to extend this thinking to the solution of a class of linear optimization problems. However, we will work on this concept in an upcoming paper. \\
+
+\emph{Solution for the example presented before} \\
+
+Applying the method for solving the example presented in section \ref{sec:MBPTMP}, we have: \\
+
+$T' \leq 1000g / 60g/min$ \\
+
+$T' \leq 16,67 min$ \quad for A \\
+
+$T' \leq 500g / 40g/min$ \\
+
+$T' \leq 12,50 min$ \quad for B \\
+
+so: \\
+
+$T' = 12$ \\
+
+Then:\\
+
+$S_A = 1000g - 12min * 60g/min = 280g$ \\
+
+$S_B = 500g - 12min * 40g/min = 20g$ \\
+
+And so we have: \\
+
+$T'' \leq (3000g + 600g + 280g) / 60g/min$ \\
+
+$T'' \leq 64,67 min$ \quad for A \\
+
+$T'' \leq (2000g + 600g + 20g) / 40g/min$ \\
+
+$T'' \leq 65,50 min$ \quad for B \\
+
+$T'' \leq (1000g + 3000g + 300g) / 100g/min$ \\
+
+$T'' \leq 43 min$ \quad for A and B \\
+
+So that: \\
+
+$T'' = 43 min$ \\
+
+So we have: \\
+
+$ T = 55 min$ \\
+
+As $T<\textrm{Z}$, then this will certainly be the optimal solution. \\
+
+In this case we will have: \\
+
+$P_A = 3300g$ e $P_B=2200g$ \\
+
+$D_A = 1000g$ e $D_B = 500g$ \\
+
+$E_A = 2300g$ e $E_B = 1700g$ \\
+
+Note that it is not important to know the values of $O_i$ and $I_i$ however these values can be found by solving the indeterminate system of equations:
+
+\begin{equation}
+\sum_i{O_i} \leq \textrm{O}
+\end{equation}
+
+\begin{equation}
+\sum_i{I_i} \leq \textrm{I}
 \end{equation}
 
 \section{Tests and results}
