--- a/(2023) Fraga et al.tex
+++ b/(2023) Fraga et al.tex
@@ -145,6 +145,8 @@ multiproduct batch \sep processing time maximization
 \section{Introduction}
 \label{sec:intro}
 
+The literature presents several scientific papers that address the multi-product batch problem. Most works target the problem of multi-product batch scheduling (MPBS), in which it is necessary to determine the ideal batch size for each product, in a production of several products, which share the same production facilities and for which demand is known \citep{Eilon1985}. In this work, we are concerned with determining the ideal processing time for a batch consisting of a set of products, each product being or not different from the other products of the same batch. That is, we consider a specific case where different products are processed simultaneously on the same processor. This case occurs, for example, during the processing of plastic bags in extruders. In this process, the resins are melted, then the molten resin passes through a cylinder forming a balloon and this balloon, after cooling, will be stored in a coil. This coil, in turn, will be cut into several coils, forming different models of plastic bags.
+
 \section{Multiproduct batch processing time maximization problem}
 \label{sec:MBPTMP}
 
@@ -549,12 +551,13 @@ The work for the elaboration of this paper is being carried out by three profess
 %% else use the following coding to input the bibitems directly in the
 %% TeX file.
 
-\begin{thebibliography}{00}
+\begin{thebibliography}{1}
 
 %% \bibitem[Author(year)]{label}
 %% Text of bibliographic item
 
-\bibitem[ ()]{}
+\bibitem[\protect\citeauthoryear{Eilon}{1985}]{Eilon1985}
+Eilon. (1985). Multi-product batch production on a single machine - A problem revisited. {\it OMEGA Int. J. of Mgmt. Sci.}, Vol. 13 (5), pp. 453--468.
 
 \end{thebibliography}
 \end{document}
