--- a/(2023) Fraga et al.tex
+++ b/(2023) Fraga et al.tex
@@ -127,7 +127,7 @@
 \end{highlights}
 
 \begin{keyword}
-multiproduct batch \sep processing time maximization
+multiproduct batch \sep processing time maximization \sep anal
 %% keywords here, in the form: keyword \sep keyword
 
 %% PACS codes here, in the form: \PACS code \sep code
@@ -145,7 +145,8 @@ multiproduct batch \sep processing time maximization
 \section{Introduction}
 \label{sec:intro}
 
-The scientific literature presents several papers that address the multi-product batch problem. Most works target the problem of multi-product batch scheduling (MPBS), in which it is necessary to determine production ordering and the ideal batch size for each product, in a production of several products, which share the same production facilities and for which demand is known \citep{Eilon1985}. In this problem, a single product is processed at a time, so it is necessary that the quantity produced is sufficient to meet the demand during the period in which other products are being processed. Ordering is often also important due to high setup costs. 
+The scientific literature presents several papers that address the multi-product batch problem. Most works target the problem of multi-product batch scheduling (MPBS), in which it is necessary to determine production ordering and the ideal batch size for each product, in a production of several products which share the same production facilities and for which demand is known \citep{Eilon1985}. In this problem, a single product is processed at a time, so it is necessary that the quantity produced is sufficient to meet the demand during the period in which other products are being processed. The solution must be determined in such a way that both setup and storage costs are minimized. Among the authors who addressed this problem are \cite{Eilon1985}, \cite{Omega1993} and \cite{LiuEtAl2020}. Other important works deal with the design of a multi-product batch plant. In this case the problem is to obtain the configuration of the plant and the equipment that minimize the capital cost of all the
+equipment items needed to fulfill the production requirements \citep{RavemarkAndRippin1998}. 
 
 In this work, we are concerned with determining the ideal processing time for a batch consisting of a set of products, each product being or not different from the other products of the same batch. That is, we consider a specific case where different products are processed simultaneously on the same processor. This case occurs, for example, during the processing of plastic bags in extruders, where the resins are melted, then pass through a cylinder forming a balloon and this balloon, and after cooling, is stored in a coil which, in turn, is cut into several smaller coils, forming different models of plastic bags.
 
@@ -559,7 +560,16 @@ The work for the elaboration of this paper is being carried out by three profess
 %% Text of bibliographic item
 
 \bibitem[\protect\citeauthoryear{Eilon}{1985}]{Eilon1985}
-Eilon. (1985). Multi-product batch production on a single machine - A problem revisited. {\it OMEGA Int. J. of Mgmt. Sci.}, Vol. 13 (5), pp. 453--468.
+Eilon. (1985). Multi-product batch production on a single machine - A problem revisited. {\it OMEGA Int. J. of Mgmt Sci.}, Vol. 13 (5), pp. 453--468.
+
+\bibitem[\protect\citeauthoryear{Liu et al}{2020}]{LiuEtAl2020}
+Liu, G., Li, F., Yang, X., and Qiu. S. (2020). The multi-stage multi-product batch-sizing problem in the steel industry. {\it  Applied Mathematics and Computation}, Vol. 369, 124830.
+
+\bibitem[\protect\citeauthoryear{Omega}{1993}]{Omega1993}
+OMEGA Journal. (1993). Single Machine Multi-product Batch Scheduling: Testing Several Solution Methods. {\it  OMEGA Int. J. of Mgmt Sci.}, Vol. 21 (6), pp. 709--711.
+
+\bibitem[\protect\citeauthoryear{Ravemark and Rippin}{1998}]{RavemarkAndRippin1998}
+Ravemark, D. E., and Rippin, D. W. T. (1998). Optimal design of a multi-product batch plant. {\it Computers chem. Engng}, Vol. 22 (1-2), pp. 177--183.
 
 \end{thebibliography}
 \end{document}
