--- a/(2023) Fraga et al.tex
+++ b/(2023) Fraga et al.tex
@@ -94,7 +94,7 @@
 %%             state={},
 %%             country={}}
 
-\author{Tatiana Balbi Fraga, Regilda Menezes and Marcos Henrique}
+\author{Tatiana Balbi Fraga, Regilda da Costa e Silva Menêzes and Marcos Luiz Henrique}
 
 \affiliation{organization={Centro Acadêmico do Agreste - Universidade Federal de Pernambuco},
              addressline={Avenida Marielle Franco, Bairro Nova Caruaru},
@@ -145,7 +145,7 @@ multiproduct batch \sep processing time maximization \sep analytical solution \s
 \section{Introduction}
 \label{sec:intro}
 
-The scientific literature presents several papers that address the multi-product batch problem. Many works target the problem of multi-product batch scheduling (MPBS), in which it is necessary to determine production ordering and the ideal batch size for each product, in a production of several products which share the same production facilities and for which demand is known \citep{Eilon1985}. In this problem, a single product is processed at a time, so it is necessary that the quantity produced is sufficient to meet the demand during the period in which other products are being processed. The solution must be determined in such a way that both setup and storage costs are minimized. Among the authors who addressed this problem are \cite{Eilon1985}, \cite{Omega1993} and \cite{LiuEtAl2020}. In the papers mentioned above, production in a single unit or in a  simple serial flowshop plant is considered, in which all products follow the same linear flow through the production units. \cite{KimEtAl1996} consider the multi-product batch problem in networked processes. As defined by the authors, in this case, the production units are not arranged in a line, and the connection between the units may or may not exist. Therefore, the production paths in the flowshop network can be different for each product. Also the passing of previous batch can be possible so that the final sequence of the production at the last stage units can be different from the initial sequence. Other important works deal with the problem of a multi-product batch plant design (MPBPD). In this case the problem is to obtain the configuration of the plant and the equipment that minimize the capital cost of all the equipment items needed to fulfill the production requirements \citep{RavemarkAndRippin1998}. 
+The scientific literature presents several papers that address multi-product batch problens. Many works target the problem of multi-product batch scheduling (MPBS), in which it is necessary to determine production ordering and the ideal batch size for each product, in a production of several products which share the same production facilities and for which demand is known \citep{Eilon1985}. In this problem, a single product is processed at a time, so it is necessary that the quantity produced is sufficient to meet the demand during the period in which other products are being processed. The solution must be determined in such a way that both setup and storage costs are minimized. Among the authors who addressed this problem are \cite{Eilon1985}, \cite{Omega1993} and \cite{LiuEtAl2020}. In the papers mentioned above, production in a single unit or in a  simple serial flowshop plant is considered, in which all products follow the same linear flow through the production units. \cite{KimEtAl1996} consider the multi-product batch problem in networked processes. As defined by the authors, in this case, the production units are not arranged in a line, and the connection between the units may or may not exist. Therefore, the production paths in the flowshop network can be different for each product. Also the passing of previous batch can be possible so that the final sequence of the production at the last stage units can be different from the initial sequence. Other important works deal with the problem of a multi-product batch plant design (MPBPD). In this case the problem is to obtain the configuration of the plant and the equipment that minimize the capital cost of all the equipment items needed to fulfill the production requirements \citep{RavemarkAndRippin1998}. 
 
 In this work, we are concerned with determining the ideal processing time for a batch consisting of a set of products, each product being or not different from the other products of the same batch. That is, we consider a specific case where different products are processed simultaneously on the same processor. This case occurs, for example, during the processing of plastic bags in extruders, where the resins are melted, then pass through a cylinder forming a balloon and this balloon, after cooling, is stored in a coil which, in turn, is cut into several smaller coils, forming different models of plastic bags. 
 
@@ -235,7 +235,7 @@ D_i, O_i, I_i \in  \mathbb{Z}^+ \quad \forall i
 
 where: \\
 
-Constraints in (2) relate the quantity produced, $P_i$, to batch processing time $T$. Constraints in (3) calculate the quantity produced, $P_i$, as a function of the primary variables, $D_i$, $O_i$ and $I_i$. Constraints in (4), (5), and (7) state that the quantity delivered to demand, the quantity shipped to the autlets, and the factory-stocked quantity of each product must be less than their respective known limits. Constraints (6) and (8) state that both the sum of product quantities sent to the autlets and the sum of product quantities stored in the factory must be less than their respective maximum allowed values. The restriction in (9) establishes that there is a batch processing time limit, $Z$, that must be respected. And finally, the constraints in (10) inform the nature of the decision variables.
+Constraints in (2) relate the quantity produced, $P_i$, to batch processing time $T$. Constraints in (3) calculate the quantity produced, $P_i$, as a function of the primary variables, $D_i$, $O_i$ and $I_i$. Constraints in (4), (5), and (7) state that the quantity delivered to demand, the quantity shipped to the autlets, and the factory-stocked quantity of each product must be less than their respective known limits. Constraints (6) and (8) state that both the sum of product quantities sent to the autlets and the sum of product quantities stored in the factory must be less than their respective maximum allowed values. The restriction in (9) establishes that there is a batch processing time limit, $\textrm{Z}$, that must be respected. And finally, the constraints in (10) inform the nature of the decision variables.
 
 \section{Analytical solution}
 \label{sec:analyticalSol}
@@ -267,7 +267,7 @@ It is also possible to split the batch processing time into two time slots:
 T = T' + T''
 \end{equation}
 
-and consider that T' is the maximum processing time used only for production that will meet the demand. Thus, we can find T', solving the reduced problem:
+and consider that $T'$ is the maximum processing time used only for production that will meet the demand. Thus, we can find $T'$, solving the reduced problem:
 
 
 \begin{equation}
@@ -297,14 +297,15 @@ max \quad T'
 $s.t.$ \\
 
 \begin{equation}
-T'  \leq \textrm{UD}_i / \textrm{p}_i \quad \forall i
+T'  \leq \lfloor{\textrm{UD}_i / \textrm{p}_i}\rfloor \quad \forall i
 \end{equation}
 
-So we have that $T'$ will be the smallest of the ratios $\textrm{UD}_i / \textrm{p}_i$ of all products. \\
+So we have that $T'$ will be the smallest of the ratios $\lfloor{\textrm{UD}_i / \textrm{p}_i}\rfloor$ of all products. \\
 
-Once we find the value of $T'$, we can calculate the value of unmet demand for each product after $T'$, $S_i$, through the equations in (22).
+Once we find the value of $T'$, we can calculate the value of unmet demand for each product after $T'$, $S_i$, through the equations in (\ref{eq:unmet1}).
 
 \begin{equation}
+\label{eq:unmet1}
 S_i = \textrm{UD}_i - \textrm{p}_i * T' \quad \forall i
 \end{equation}
 
@@ -343,11 +344,11 @@ max \quad T''
 $s.t.$ \\
 
 \begin{equation}
-T'' \leq (\textrm{UO}_i + \textrm{UI}_i + S_i) / \textrm{p}_i  \quad \forall i
+T'' \leq \lfloor{(\textrm{UO}_i + \textrm{UI}_i + S_i) / \textrm{p}_i}\rfloor  \quad \forall i
 \end{equation}
 
 \begin{equation}
-T'' \leq (\textrm{O} + \textrm{I} + \sum_i {S_i}) / \sum_i {\textrm{p}_i}
+T'' \leq \lfloor{(\textrm{O} + \textrm{I} + \sum_i {S_i}) / \sum_i {\textrm{p}_i}}\rfloor
 \end{equation}
 
 So, being $\textrm{N}$ the number of products in the batch, we will have $\textrm{N}+1$ inequalities that limit the value of $T''$ by constants and again $T''$ will be defined by the smallest value. \\
@@ -357,15 +358,20 @@ So the solution method can be decomposed into 4 steps: \\
 step 1: find $T'$, where:
 
 \begin{equation}
-T' = \min_{\forall i} \{\textrm{UD}_i / \textrm{p}_i\}
+T' = \lfloor{\min_{\forall i} \{\textrm{UD}_i / \textrm{p}_i\}}\rfloor
 \end{equation}
 
-step 2: calculate $S_i$ for all products. \\
+step 2: calculate $S_i$ for all products.
+
+\begin{equation}
+\label{eq:unmet}
+S_i = \textrm{UD}_i - \textrm{p}_i * T' \quad \forall i
+\end{equation}
 
 step 3: find $T''$, where:
 
 \begin{equation}
-T'' = \min \{\min_{\forall i} \{(\textrm{UO}_i + \textrm{UI}_i + S_i) / \textrm{p}_i\},(\textrm{O} + \textrm{I} + \sum_i {S_i}) / \sum_i {\textrm{p}_i}\}
+T'' = \lfloor{\min \{\min_{\forall i} \{(\textrm{UO}_i + \textrm{UI}_i + S_i) / \textrm{p}_i\},(\textrm{O} + \textrm{I} + \sum_i {S_i}) / \sum_i {\textrm{p}_i}\}}\rfloor
 \end{equation}
 
 step 4: calculate $T$, where: 
@@ -539,7 +545,7 @@ Table X presents a comparison of the results obtained by applying the analytical
 \section{Contributions}
 \label{sec:contributions}
 
-The work for the elaboration of this paper is being carried out by three professors, as described below. Professor Fraga, T.B., was responsible for identifying the problem, mathematical modeling, proposing an analytical solution, developing a solver in C ++ for the analytical solution, developing benchmarks, and testing the analytical method and the solver in C++, as well as surveying bibliography and elaboration of the paper. Professor Henrique, M.  is developing a solver in LINGO for testing and validating the model. Professor Menezes, R. is contributing to the bibliographic survey and to writing the bibliographic review presented in the paper. 
+The work for the elaboration of this paper is being carried out by three professors, as described below. Professor Fraga, T.B., was responsible for identifying the problem, mathematical modeling, proposing an analytical solution, developing a solver in C ++ for the analytical solution, developing benchmarks, and testing the analytical method and the solver in C++, as well as surveying bibliography and elaboration of the paper. Professor Henrique, M. L. is developing a solver in LINGO for testing and validating the model. Professor Menezes, R. D. C. S. is contributing to the bibliographic survey and to writing the bibliographic review presented in the paper. 
 
 \section{Acknowledgments}
 \label{sec:acknowledgments}
